--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
 <body>
     <h1>Mevlüt Çelik - Kodluyoruz ilk repo</h1>
     <p>Bu benim Github'daki ilk repom. Aynı zamanda bu repoyu Kodluyoruz'da aldığım eğitim için hazırladım.</p>
-    <a href="https://app.patika.dev/mevlut">Mevlüt Çelik - Patika (Kodluyoruz)</a>
-    <h2>Diğer linklerim</h2>
-    <ul>
-        <li>🌐 <strong>Web site:</strong> <a href="https://www.mevlutcelik.com">www.mevlutcelik.com</a></li>
-        <li>💼 <strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/mevlutcelik">Mevlüt Çelik</a></li>
-        <li>📩 <strong>E-mail:</strong> <a href="mailto:info@mevlutcelik.com">info@mevlutcelik.com</a></li>
-        <li>🧑 <strong>Kişisel Instagram:</strong> <a href="https://www.instagram.com/mevlut.celik23">mevlut.celik23</a></li>
-        <li>💡 <strong>Instagram:</strong> <a href="https://www.instagram.com/mevlutcelikcom">mevlutcelikcom</a></li>
-    </div>
+    <a href="https://app.patika.dev/abdullah">Abdullah Taş - Patika (Kodluyoruz)</a>
+    
+    
 </body>
 
 </html>
