--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mevlüt Çelik - Kodluyoruz ilk repo</title>
+    <title>Abdullah Taş - Kodluyoruz ilk repo</title>
     <style>h1,h2,a,ul,li,p{font-family: system-ui, sans-serif;}</style>
 </head>
 
 <body>
-    <h1>Mevlüt Çelik - Kodluyoruz ilk repo</h1>
+    <h1>Abdullah Taş - Kodluyoruz ilk repo</h1>
     <p>Bu benim Github'daki ilk repom. Aynı zamanda bu repoyu Kodluyoruz'da aldığım eğitim için hazırladım.</p>
     <a href="https://app.patika.dev/abdullah">Abdullah Taş - Patika (Kodluyoruz)</a>
     
