--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Abdullah Taş - Kodluyoruz ilk repo</h1>
     <p>Bu benim Github'daki ilk repom. Aynı zamanda bu repoyu Kodluyoruz'da aldığım eğitim için hazırladım.</p>
-    <a href="https://app.patika.dev/abdullah">Abdullah Taş - Patika (Kodluyoruz)</a>
+    <a href="https://app.patika.dev/abdullahtas">Abdullah Taş - Patika (Kodluyoruz)</a>
     
     
 </body>
